// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`body.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (class {}[1] = 1);

=====================================output=====================================
export default (class {}[1] = 1);

================================================================================
`;

exports[`class_instance.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (class {}.getInstance());

=====================================output=====================================
export default (class {}.getInstance());

================================================================================
`;

exports[`function_tostring.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default (function() {}).toString();

=====================================output=====================================
export default (function() {}.toString());

================================================================================
`;
